--- a/account.html
+++ b/account.html
@@ -13,27 +13,27 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><span class="Menu"><img class="GamePie" src="Menu/GAMEPIE_free-file (1).png" alt="png"></span></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="key.html"><span class="key">Ключі</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="account.html"><span class="account">Аккаунты</span></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg bg-primary">
+    <div class="container-fluid">
+      <a class="nav-link active" aria-current="page" href="key.html"><span class="key">Ключі</span></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="account.html"><span class="account">Аккаунти</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="navbar-brand" href="index.html"><span class="Menu"><img class="GamePie" src="Menu/GAMEPIE_free-file (1).png" alt="png"></span></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
       
 <div>
-    <p>В процесі</p>
+    <p>На даний момент не доступно</p>
 </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
