--- a/key2.html
+++ b/key2.html
@@ -26,7 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="key.html"><span class="key">Ключі</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="account.html"><span class="account">Аккаунты</span></a>
+                <a class="nav-link" href="account.html"><span class="account">Аккаунти</span></a>
               </li>
             </ul>
           </div>
