--- a/key.html
+++ b/key.html
@@ -17,17 +17,17 @@
 
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><span class="Menu"><img class="GamePie" src="Menu/GAMEPIE_free-file (1).png" alt="png"></span></a>
+          <a class="nav-link active" aria-current="page" href="key.html"><span class="key">Ключі</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="key.html"><span class="key">Ключі</span></a>
+                <a class="nav-link" href="account.html"><span class="account">Аккаунти</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="account.html"><span class="account">Аккаунты</span></a>
+                <a class="navbar-brand" href="index.html"><span class="Menu"><img class="GamePie" src="Menu/GAMEPIE_free-file (1).png" alt="png"></span></a>
               </li>
             </ul>
           </div>
